feat(architecture): 添加插件架构和消息处理系统
- 新增插件系统：PluginManager、MessagePlugin接口和抽象类
- 添加消息实体分类：支持文本、图片、视频、音频、文档等15种消息类型
- 实现原始消息存储：RawMessage实体和Repository
- 添加消息解析服务：MessageParser、MessageTypeDetector、MessageStorageService
- 更新ChannelMonitorService，重构为插件驱动架构
- 添加TDLib API使用指南文档（863行）
- 包含完整的单元测试和集成测试（约4000行测试代码）
- 添加Jackson JSON处理依赖